Changes
=======

1.3.0 (TBD)
-----------

1.3b2 (TBD)
-----------

Changes:

- The merge tool has new "sum" and "count" merge methods (#2457).

1.3b1 (2022-05-10)
------------------

New features:

- A dataset's write method now accepts Numpy masked arrays and has a "masked"
  keyword argument. In this case, if masked is False, the masked array's filled
  method is called with the dataset's nodata value or else the masked array's
  fill value. If the masked argument is True, the dataset's write_mask method
  is called.

Changes:

- Various decorators requiring a GDAL version of 2+ have been deleted. Rasterio
  now absolutely requires GDAL 3.1+ (#2452).

Packaging:

Wheels for 1.3b1 are built using the version of rasterio-wheels dated
2022-05-10.

1.3a4 (2022-04-20)
------------------

Deprecations:

- The precision keyword arguments of methods in rasterio.transform,
  rasterio.windows, and rasterio.merge are unused and will be removed in
  version 2.0. The --precision option of rio-merge is similarly deprecated
  (#2432).
- The rasterio.path module will be removed in version 1.4 and a deprecation
  warning is issued when the module is imported (#2423).

New features:

- Datasets have a new statistics method that computes the minimum, maximum,
  mean, and standard deviation of a raster band's data, matching the output of
  gdalinfo (#2441).
- The rio-warp CLI command now takes --wo (--warper-option) and --to
  (--transformer-option) options, allowing the use of PROJ coordinate
  transformation pipelines like "--to coordinate_operation=proj=pipeline"
  (#2438).

Changes:

- The Python file VSI plugin is now created and installed at the same time
  other GDAL drivers are registered (#2435).
- Various optimizations for sample_gen() (#2338).
- Update Cython property declarations to modern style (#2316).
- The rasterio.path module has been moved to rasterio._path and all its member
  made private (#2423). A new version of rasterio.path temporarily provides